# arXiv-paper-summariser

./: .env.example  .gitignore  .replit  404.html  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  index.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  tailwind.config.ts  tsconfig.json
.agents/memory/: MEMORY.md  clerk-auth.md
.github/workflows/: enterprise-ci-cd.yml
.migration-backup/: .env.production.example  .replit  Procfile  README.md  alembic.ini  docker-compose.yml  next.config.mjs  package-lock.json  package.json  railway.json  requirements.txt
.migration-backup/app/: main.py
.migration-backup/arxiv-research-copilot/: Dockerfile  README.md  docker-compose.yml  requirements.txt
.migration-backup/arxiv_paper_summariser_v15/: benchmark_prediction.py  workflows.py
.migration-backup/docs/: v12_knowledge_graph.md  v4_architecture.md  v6-ai-native-research-os.md
.migration-backup/migrations/: env.py
.migration-backup/policies/: gatekeeper-requirements.yaml
.migration-backup/research_discovery/: feed.py  models.py
.migration-backup/scripts/: deploy.sh  (+3 more)
app/: main.py
arxiv-research-copilot/: .env.example
arxiv_paper_summariser_v15/: __init__.py  cli.py  simulation_engine.py
attached_assets/: Pasted-Here-s-a-complete-Features-How-It-Works-document-you-ca_1781164062310.txt
compliance/: audit-event-schema.json  controls.md
dashboard/: index.html  index.txt
docs/: V7_COLLABORATION_ARCHITECTURE.md
feed/: index.html  index.txt
graph/: index.html  index.txt
lib/: api.ts
login/: index.html  index.txt
papers/: index.html  index.txt
profile/: index.html  index.txt
research_discovery/: __init__.py  memory.py  ranking.py
search/: index.html  index.txt
tests/: test_chunking.py  test_citations_retry.py  test_pipeline.py  test_research_discovery.py  test_v12_knowledge_graph.py  test_v13_platform_unittest.py  test_v15_platform.py  test_v7_collaboration.py  test_v8_literature_review.py
trending/: index.html  index.txt
workspace/: index.html  index.txt
(+295 files in other folders)
