[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-paper-summariser"
version = "15.0.0"
description = "V15 research simulation and experiment planning toolkit for arXiv summarisation systems."
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "arXiv Paper Summariser Maintainers"}]

[project.scripts]
arxiv-v15-simulate = "arxiv_paper_summariser_v15.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["arxiv_paper_summariser_v15*"]
