[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-paper-summariser"
version = "16.0.0"
description = "V16 multimodal research-paper understanding platform."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "arXiv Paper Summariser" }]
license = { text = "MIT" }
keywords = ["arxiv", "papers", "multimodal", "ocr", "equations", "diagrams"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages.find]
where = ["src"]
